WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
227959
Fix type of exceptions thrown in the WebAudio API
https://bugs.webkit.org/show_bug.cgi?id=227959
Summary
Fix type of exceptions thrown in the WebAudio API
Chris Dumez
Reported
2021-07-14 10:39:41 PDT
AudioNode constructors should throw a NotSupportedError when the requested number of channels is too large. Currently, WebKit throws an IndexSizeError but this doesn't match Blink / Gecko and causes some WPT tests to fail.
Attachments
Patch
(65.27 KB, patch)
2021-07-14 11:37 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2021-07-14 11:37:45 PDT
Created
attachment 433513
[details]
Patch
Yusuke Suzuki
Comment 2
2021-07-14 13:12:59 PDT
Comment on
attachment 433513
[details]
Patch r=me
EWS
Comment 3
2021-07-14 13:39:50 PDT
Committed
r279917
(
239666@main
): <
https://commits.webkit.org/239666@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 433513
[details]
.
Radar WebKit Bug Importer
Comment 4
2021-07-14 13:40:18 PDT
<
rdar://problem/80594511
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug